--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.2",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
